# fossil-headers-db

./: Cargo.toml  Dockerfile.fix  Dockerfile.update  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
sql/: missing_blocks.sql
src/: lib.rs  main.rs
src/commands/: mod.rs
src/db/: mod.rs
src/db/sql/: blockheaders_table.sql
src/endpoints/: mod.rs
src/fossil_mmr/: mod.rs
src/router/: handlers.rs  mod.rs
src/types/: mod.rs
