[package]
name = "fossil_headers_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = [ "json" ] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls", "macros" ] }
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros" ] }
env_logger = "0.11"
tracing = "0.1"
anyhow = "1"
once_cell = "1"
log = "0.4"
eyre = "0.6"
